--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "Datepicker",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "A Vue.js project",
   "author": "Jean Marc BRUNO <bruno.jm@edps.fr>",
-  "contributors": [{
-    "name": "Paul AUBERTINr",
-    "email": "aubertin.pr@edps.fr"
-  }],
+  "contributors": [
+    {
+      "name": "Paul AUBERTINr",
+      "email": "aubertin.pr@edps.fr"
+    }
+  ],
   "scripts": {
     "dev": "node build/dev-server.js",
     "build": "node build/build.js",
@@ -19,8 +21,8 @@
     "type": "git",
     "url": "https://github.com/jimibi/Datepicker"
   },
-   "bugs": {
-     "url": "https://github.com/jimibi/Datepicker/issues"
+  "bugs": {
+    "url": "https://github.com/jimibi/Datepicker/issues"
   },
   "license": "MIT",
   "keywords": [
